<resources>
    <string name="app_name">Inventory Manager</string>
    <string name="editor_activity_add_mode_label">Add an item</string>
    <string name="editor_activity_edit_mode_label">Edit the item</string>
    <string name="entry_type_label">Equipment type</string>
    <string name="entry_name_label">Product name</string>
    <string name="entry_prc_label">Price</string>
    <string name="entry_prc_hint">0.00</string>
    <string name="entry_qnt_label">Quantity</string>
    <string name="entry_supp_name_label">Supplier</string>
    <string name="entry_supp_no_label">Supplier Contact</string>
    <string name="item_type_pc">PC</string>
    <string name="item_type_tablet">Tablet</string>
    <string name="item_type_monitor">Monitor</string>
    <string name="item_type_printer">Printer</string>
    <string name="item_type_mobile">Mobile</string>
    <string name="item_type_other">Other</string>
    <string name="supp_phone_prefix">+44</string>
    <string name="item_saved_toast">New item saved.</string>
    <string name="save_failed_toast">Failed to save new item.</string>
    <string name="item_updated_toast">Your item has been updated.</string>
    <string name="update_failed_toast">This item has not been updated.</string>
    <string name="empty_state_textview_text">You have no items in stock.\n Press + to add items.</string>
    <string name="unsaved_changes_warning">You have unsaved changes. Are you sure you want to quit</string>
    <string name="unsaved_changes_discard">Discard changes</string>
    <string name="unsaved_changes_keep_editing">Keep editing</string>
    <string name="deletion_warning">Are you sure you want to delete this item?</string>
    <string name="deletion_confirm">Yes</string>
    <string name="deletion_void">Cancel</string>
    <string name="item_deleted_toast">This item has been deleted.</string>
    <string name="delete_failed_toast">This item could not be deleted.</string>
    <string name="sale_button_text">SELL</string>
    <string name="empty_fields_warning">Your item editor has empty fields.</string>
    <string name="qnt_updated_toast">Item quantity updated.</string>
    <string name="currency_symbol">£</string>
    <string name="qty_prefix">Qty:</string>
    <string name="product_details_text">Product details...</string>
    <string name="supplier_prefix">Supplier:</string>
    <string name="delete_button_title">Delete</string>
    <string name="save_button_title">Save</string>
    <string name="delete_item_button_title">Delete item</string>
    <string name="call_the_suppler_advice">Click above to call the suppler.</string>
</resources>
