<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/space_large"
    tools:context=".EntryEditor">

    <LinearLayout
        android:id="@+id/entry2_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/EntryLabelStyle"
            android:text="@string/entry_name_label" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detailview_item_name_tv"
                style="@style/detailViewTextView"
                tools:text="A VERY LONG ITEM NAME LIKE I DONT KNOW" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/entry3_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/EntryLabelStyle"
            android:text="@string/entry_prc_label" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detailview_item_prc_tv"
                style="@style/detailViewTextView"
                tools:text="333.78" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/entry4_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/EntryLabelStyle"
            android:text="@string/entry_qnt_label" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/reduce_qnt_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="@dimen/quantity_buttons_max_size"
                android:maxWidth="@dimen/quantity_buttons_max_size"
                android:src="@drawable/mnssgn"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/detailview_item_qnt_tv"
                style="@style/detailViewTextView"
                tools:text="2"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/space_small"/>

            <ImageButton
                android:id="@+id/add_qnt_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="@dimen/quantity_buttons_max_size"
                android:maxWidth="@dimen/quantity_buttons_max_size"
                android:src="@drawable/plssgn"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/entry5_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/EntryLabelStyle"
            android:text="@string/entry_supp_name_label" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detailview_item_suppname_tv"
                style="@style/detailViewTextView"
                tools:text="My favourite supplier" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/entry6_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/EntryLabelStyle"
            android:text="@string/entry_supp_no_label" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/space_small">

            <TextView
                android:id="@+id/detailview_item_suppno_tv"
                style="@style/detailViewTextView"
                android:clickable="true"
                tools:text="0114 250 2000" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>