<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        style="@style/listViewContainerStyle"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical"
            android:padding="@dimen/space_medium">

            <TextView
                android:id="@+id/item_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lobster_regular"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/supplier_prefix"
                    android:textColor="@color/colorStandardText"
                    android:textSize="@dimen/text_tiny" />

                <TextView
                    android:id="@+id/item_supp_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/space_small"
                    android:textColor="@color/colorStandardText"
                    android:textSize="@dimen/text_small" />
            </LinearLayout>

            <TextView
                android:id="@+id/product_details_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_small"
                android:background="@drawable/layout_round"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/lobster_regular"
                android:paddingLeft="@dimen/space_small"
                android:text="@string/product_details_text"
                android:textColor="@color/listViewItemBackground"
                android:textSize="@dimen/text_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/space_medium">

            <TextView
                android:id="@+id/item_price_tv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_medium"/>

            <TextView
                android:id="@+id/sale_button"
                style="@style/saleButtonStyle"
                android:text="@string/sale_button_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="@dimen/space_small"
                    android:text="@string/qty_prefix"
                    android:textColor="@color/colorStandardText"
                    android:textSize="@dimen/text_small" />

                <TextView
                    android:id="@+id/item_qnt_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/space_small"
                    android:textColor="@color/colorStandardText"
                    android:textSize="@dimen/text_small"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>